// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverlayAlertComponent matches snapshot when type is "approved" 1`] = `
<div
  className="bid-tracker-overlay-alert bid-tracker-overlay-alert--success"
>
  <div
    className="bid-tracker-overlay-alert-content-container"
  >
    <div
      className="bid-tracker-overlay-alert-content"
    >
      <ApprovedAlert
        userName="rehmant"
      />
    </div>
  </div>
</div>
`;

exports[`OverlayAlertComponent matches snapshot when type is "closed" 1`] = `
<div
  className="bid-tracker-overlay-alert bid-tracker-overlay-alert--closed"
>
  <div
    className="bid-tracker-overlay-alert-content-container"
  >
    <div
      className="bid-tracker-overlay-alert-content"
    >
      <ClosedAlert
        title="POLITICAL/ECONOMIC OFFICER (10035561)"
      />
    </div>
  </div>
</div>
`;

exports[`OverlayAlertComponent matches snapshot when type is "declined" 1`] = `
<div
  className="bid-tracker-overlay-alert bid-tracker-overlay-alert--closed"
>
  <div
    className="bid-tracker-overlay-alert-content-container"
  >
    <div
      className="bid-tracker-overlay-alert-content"
    >
      <DeclinedAlert
        bureau="(AF) BUREAU OF AFRICAN AFFAIRS"
      />
    </div>
  </div>
</div>
`;

exports[`OverlayAlertComponent matches snapshot when type is "fake prop" 1`] = `
<div
  className="bid-tracker-overlay-alert "
>
  <div
    className="bid-tracker-overlay-alert-content-container"
  >
    <div
      className="bid-tracker-overlay-alert-content"
    />
  </div>
</div>
`;

exports[`OverlayAlertComponent matches snapshot when type is "handshake_declined" 1`] = `
<div
  className="bid-tracker-overlay-alert bid-tracker-overlay-alert--closed"
>
  <div
    className="bid-tracker-overlay-alert-content-container"
  >
    <div
      className="bid-tracker-overlay-alert-content"
    >
      <HandshakeDeclinedAlert
        bureau="(AF) BUREAU OF AFRICAN AFFAIRS"
        userName="rehmant"
      />
    </div>
  </div>
</div>
`;

exports[`OverlayAlertComponent matches snapshot when type is "handshake_offered" 1`] = `
<div
  className="bid-tracker-overlay-alert bid-tracker-overlay-alert--pending"
>
  <div
    className="bid-tracker-overlay-alert-content-container"
  >
    <div
      className="bid-tracker-overlay-alert-content"
    >
      <HandshakeOfferedAlert
        acceptBid={[Function]}
        declineBid={[Function]}
        id={3}
        userName="rehmant"
      />
    </div>
  </div>
</div>
`;

exports[`OverlayAlertComponent matches snapshot when type is "in_panel" 1`] = `
<div
  className="bid-tracker-overlay-alert bid-tracker-overlay-alert--pending"
>
  <div
    className="bid-tracker-overlay-alert-content-container"
  >
    <div
      className="bid-tracker-overlay-alert-content"
    >
      <InPanelAlert
        title="POLITICAL/ECONOMIC OFFICER (10035561)"
      />
    </div>
  </div>
</div>
`;

exports[`OverlayAlertComponent matches snapshot when type is "panel_rescheduled" 1`] = `
<div
  className="bid-tracker-overlay-alert bid-tracker-overlay-alert--pending"
>
  <div
    className="bid-tracker-overlay-alert-content-container"
  >
    <div
      className="bid-tracker-overlay-alert-content"
    >
      <PanelRescheduledAlert />
    </div>
  </div>
</div>
`;
